cmake_minimum_required (VERSION 2.8.12)
project (kubernetes-client-c-api)

cmake_policy(SET CMP0063 NEW)

set(CMAKE_C_VISIBILITY_PRESET default)
set(CMAKE_CXX_VISIBILITY_PRESET default)
set(CMAKE_VISIBILITY_INLINES_HIDDEN OFF)
set(CMAKE_BUILD_TYPE Debug)

find_package(OpenSSL)

if (OPENSSL_FOUND)
	message (STATUS "OPENSSL found")
	set (CMAKE_C_FLAGS "-DOPENSSL")
	include_directories(${OPENSSL_INCLUDE_DIR})
	include_directories(${OPENSSL_INCLUDE_DIRS})
	link_directories(${OPENSSL_LIBRARIES})
	message(STATUS "Using OpenSSL ${OPENSSL_VERSION}")
else()
	message (STATUS "OpenSSL Not found.")
endif()

set(pkgName "kubernetes")

find_package(CURL 7.58.0 REQUIRED)
if(CURL_FOUND)
	include_directories(${CURL_INCLUDE_DIR})
	set(PLATFORM_LIBRARIES ${PLATFORM_LIBRARIES} ${CURL_LIBRARIES} )
else(CURL_FOUND)
	message(FATAL_ERROR "Could not find the CURL library and development files.")
endif()

include_directories(
    include
    src
    external
    api
    model
)

aux_source_directory(include SRCS)
aux_source_directory(src SRCS)
aux_source_directory(external SRCS)
aux_source_directory(api SRCS)
aux_source_directory(model SRCS)

include_directories(/usr/local/include)
link_directories(/usr/local/lib)

# Add library with project file with project name as library name
add_library(${pkgName} SHARED ${SRCS})

# Link dependent libraries
target_link_libraries(${pkgName} ${CURL_LIBRARIES} )

#install library to destination
install(TARGETS ${pkgName} DESTINATION ${CMAKE_INSTALL_PREFIX})

# generate files
# models
#   model/io_k8s_api_admissionregistration_v1_mutating_webhook.c
#   model/io_k8s_api_admissionregistration_v1_mutating_webhook_configuration.c
#   model/io_k8s_api_admissionregistration_v1_mutating_webhook_configuration_list.c
#   model/io_k8s_api_admissionregistration_v1_rule_with_operations.c
#   model/io_k8s_api_admissionregistration_v1_service_reference.c
#   model/io_k8s_api_admissionregistration_v1_validating_webhook.c
#   model/io_k8s_api_admissionregistration_v1_validating_webhook_configuration.c
#   model/io_k8s_api_admissionregistration_v1_validating_webhook_configuration_list.c
#   model/io_k8s_api_admissionregistration_v1_webhook_client_config.c
#   model/io_k8s_api_admissionregistration_v1beta1_mutating_webhook.c
#   model/io_k8s_api_admissionregistration_v1beta1_mutating_webhook_configuration.c
#   model/io_k8s_api_admissionregistration_v1beta1_mutating_webhook_configuration_list.c
#   model/io_k8s_api_admissionregistration_v1beta1_rule_with_operations.c
#   model/io_k8s_api_admissionregistration_v1beta1_service_reference.c
#   model/io_k8s_api_admissionregistration_v1beta1_validating_webhook.c
#   model/io_k8s_api_admissionregistration_v1beta1_validating_webhook_configuration.c
#   model/io_k8s_api_admissionregistration_v1beta1_validating_webhook_configuration_list.c
#   model/io_k8s_api_admissionregistration_v1beta1_webhook_client_config.c
#   model/io_k8s_api_apiserverinternal_v1alpha1_server_storage_version.c
#   model/io_k8s_api_apiserverinternal_v1alpha1_storage_version.c
#   model/io_k8s_api_apiserverinternal_v1alpha1_storage_version_condition.c
#   model/io_k8s_api_apiserverinternal_v1alpha1_storage_version_list.c
#   model/io_k8s_api_apiserverinternal_v1alpha1_storage_version_status.c
#   model/io_k8s_api_apps_v1_controller_revision.c
#   model/io_k8s_api_apps_v1_controller_revision_list.c
#   model/io_k8s_api_apps_v1_daemon_set.c
#   model/io_k8s_api_apps_v1_daemon_set_condition.c
#   model/io_k8s_api_apps_v1_daemon_set_list.c
#   model/io_k8s_api_apps_v1_daemon_set_spec.c
#   model/io_k8s_api_apps_v1_daemon_set_status.c
#   model/io_k8s_api_apps_v1_daemon_set_update_strategy.c
#   model/io_k8s_api_apps_v1_deployment.c
#   model/io_k8s_api_apps_v1_deployment_condition.c
#   model/io_k8s_api_apps_v1_deployment_list.c
#   model/io_k8s_api_apps_v1_deployment_spec.c
#   model/io_k8s_api_apps_v1_deployment_status.c
#   model/io_k8s_api_apps_v1_deployment_strategy.c
#   model/io_k8s_api_apps_v1_replica_set.c
#   model/io_k8s_api_apps_v1_replica_set_condition.c
#   model/io_k8s_api_apps_v1_replica_set_list.c
#   model/io_k8s_api_apps_v1_replica_set_spec.c
#   model/io_k8s_api_apps_v1_replica_set_status.c
#   model/io_k8s_api_apps_v1_rolling_update_daemon_set.c
#   model/io_k8s_api_apps_v1_rolling_update_deployment.c
#   model/io_k8s_api_apps_v1_rolling_update_stateful_set_strategy.c
#   model/io_k8s_api_apps_v1_stateful_set.c
#   model/io_k8s_api_apps_v1_stateful_set_condition.c
#   model/io_k8s_api_apps_v1_stateful_set_list.c
#   model/io_k8s_api_apps_v1_stateful_set_spec.c
#   model/io_k8s_api_apps_v1_stateful_set_status.c
#   model/io_k8s_api_apps_v1_stateful_set_update_strategy.c
#   model/io_k8s_api_authentication_v1_bound_object_reference.c
#   model/io_k8s_api_authentication_v1_token_request.c
#   model/io_k8s_api_authentication_v1_token_request_spec.c
#   model/io_k8s_api_authentication_v1_token_request_status.c
#   model/io_k8s_api_authentication_v1_token_review.c
#   model/io_k8s_api_authentication_v1_token_review_spec.c
#   model/io_k8s_api_authentication_v1_token_review_status.c
#   model/io_k8s_api_authentication_v1_user_info.c
#   model/io_k8s_api_authentication_v1beta1_token_review.c
#   model/io_k8s_api_authentication_v1beta1_token_review_spec.c
#   model/io_k8s_api_authentication_v1beta1_token_review_status.c
#   model/io_k8s_api_authentication_v1beta1_user_info.c
#   model/io_k8s_api_authorization_v1_local_subject_access_review.c
#   model/io_k8s_api_authorization_v1_non_resource_attributes.c
#   model/io_k8s_api_authorization_v1_non_resource_rule.c
#   model/io_k8s_api_authorization_v1_resource_attributes.c
#   model/io_k8s_api_authorization_v1_resource_rule.c
#   model/io_k8s_api_authorization_v1_self_subject_access_review.c
#   model/io_k8s_api_authorization_v1_self_subject_access_review_spec.c
#   model/io_k8s_api_authorization_v1_self_subject_rules_review.c
#   model/io_k8s_api_authorization_v1_self_subject_rules_review_spec.c
#   model/io_k8s_api_authorization_v1_subject_access_review.c
#   model/io_k8s_api_authorization_v1_subject_access_review_spec.c
#   model/io_k8s_api_authorization_v1_subject_access_review_status.c
#   model/io_k8s_api_authorization_v1_subject_rules_review_status.c
#   model/io_k8s_api_authorization_v1beta1_local_subject_access_review.c
#   model/io_k8s_api_authorization_v1beta1_non_resource_attributes.c
#   model/io_k8s_api_authorization_v1beta1_non_resource_rule.c
#   model/io_k8s_api_authorization_v1beta1_resource_attributes.c
#   model/io_k8s_api_authorization_v1beta1_resource_rule.c
#   model/io_k8s_api_authorization_v1beta1_self_subject_access_review.c
#   model/io_k8s_api_authorization_v1beta1_self_subject_access_review_spec.c
#   model/io_k8s_api_authorization_v1beta1_self_subject_rules_review.c
#   model/io_k8s_api_authorization_v1beta1_self_subject_rules_review_spec.c
#   model/io_k8s_api_authorization_v1beta1_subject_access_review.c
#   model/io_k8s_api_authorization_v1beta1_subject_access_review_spec.c
#   model/io_k8s_api_authorization_v1beta1_subject_access_review_status.c
#   model/io_k8s_api_authorization_v1beta1_subject_rules_review_status.c
#   model/io_k8s_api_autoscaling_v1_cross_version_object_reference.c
#   model/io_k8s_api_autoscaling_v1_horizontal_pod_autoscaler.c
#   model/io_k8s_api_autoscaling_v1_horizontal_pod_autoscaler_list.c
#   model/io_k8s_api_autoscaling_v1_horizontal_pod_autoscaler_spec.c
#   model/io_k8s_api_autoscaling_v1_horizontal_pod_autoscaler_status.c
#   model/io_k8s_api_autoscaling_v1_scale.c
#   model/io_k8s_api_autoscaling_v1_scale_spec.c
#   model/io_k8s_api_autoscaling_v1_scale_status.c
#   model/io_k8s_api_autoscaling_v2beta1_container_resource_metric_source.c
#   model/io_k8s_api_autoscaling_v2beta1_container_resource_metric_status.c
#   model/io_k8s_api_autoscaling_v2beta1_cross_version_object_reference.c
#   model/io_k8s_api_autoscaling_v2beta1_external_metric_source.c
#   model/io_k8s_api_autoscaling_v2beta1_external_metric_status.c
#   model/io_k8s_api_autoscaling_v2beta1_horizontal_pod_autoscaler.c
#   model/io_k8s_api_autoscaling_v2beta1_horizontal_pod_autoscaler_condition.c
#   model/io_k8s_api_autoscaling_v2beta1_horizontal_pod_autoscaler_list.c
#   model/io_k8s_api_autoscaling_v2beta1_horizontal_pod_autoscaler_spec.c
#   model/io_k8s_api_autoscaling_v2beta1_horizontal_pod_autoscaler_status.c
#   model/io_k8s_api_autoscaling_v2beta1_metric_spec.c
#   model/io_k8s_api_autoscaling_v2beta1_metric_status.c
#   model/io_k8s_api_autoscaling_v2beta1_object_metric_source.c
#   model/io_k8s_api_autoscaling_v2beta1_object_metric_status.c
#   model/io_k8s_api_autoscaling_v2beta1_pods_metric_source.c
#   model/io_k8s_api_autoscaling_v2beta1_pods_metric_status.c
#   model/io_k8s_api_autoscaling_v2beta1_resource_metric_source.c
#   model/io_k8s_api_autoscaling_v2beta1_resource_metric_status.c
#   model/io_k8s_api_autoscaling_v2beta2_container_resource_metric_source.c
#   model/io_k8s_api_autoscaling_v2beta2_container_resource_metric_status.c
#   model/io_k8s_api_autoscaling_v2beta2_cross_version_object_reference.c
#   model/io_k8s_api_autoscaling_v2beta2_external_metric_source.c
#   model/io_k8s_api_autoscaling_v2beta2_external_metric_status.c
#   model/io_k8s_api_autoscaling_v2beta2_horizontal_pod_autoscaler.c
#   model/io_k8s_api_autoscaling_v2beta2_horizontal_pod_autoscaler_behavior.c
#   model/io_k8s_api_autoscaling_v2beta2_horizontal_pod_autoscaler_condition.c
#   model/io_k8s_api_autoscaling_v2beta2_horizontal_pod_autoscaler_list.c
#   model/io_k8s_api_autoscaling_v2beta2_horizontal_pod_autoscaler_spec.c
#   model/io_k8s_api_autoscaling_v2beta2_horizontal_pod_autoscaler_status.c
#   model/io_k8s_api_autoscaling_v2beta2_hpa_scaling_policy.c
#   model/io_k8s_api_autoscaling_v2beta2_hpa_scaling_rules.c
#   model/io_k8s_api_autoscaling_v2beta2_metric_identifier.c
#   model/io_k8s_api_autoscaling_v2beta2_metric_spec.c
#   model/io_k8s_api_autoscaling_v2beta2_metric_status.c
#   model/io_k8s_api_autoscaling_v2beta2_metric_target.c
#   model/io_k8s_api_autoscaling_v2beta2_metric_value_status.c
#   model/io_k8s_api_autoscaling_v2beta2_object_metric_source.c
#   model/io_k8s_api_autoscaling_v2beta2_object_metric_status.c
#   model/io_k8s_api_autoscaling_v2beta2_pods_metric_source.c
#   model/io_k8s_api_autoscaling_v2beta2_pods_metric_status.c
#   model/io_k8s_api_autoscaling_v2beta2_resource_metric_source.c
#   model/io_k8s_api_autoscaling_v2beta2_resource_metric_status.c
#   model/io_k8s_api_batch_v1_job.c
#   model/io_k8s_api_batch_v1_job_condition.c
#   model/io_k8s_api_batch_v1_job_list.c
#   model/io_k8s_api_batch_v1_job_spec.c
#   model/io_k8s_api_batch_v1_job_status.c
#   model/io_k8s_api_batch_v1beta1_cron_job.c
#   model/io_k8s_api_batch_v1beta1_cron_job_list.c
#   model/io_k8s_api_batch_v1beta1_cron_job_spec.c
#   model/io_k8s_api_batch_v1beta1_cron_job_status.c
#   model/io_k8s_api_batch_v1beta1_job_template_spec.c
#   model/io_k8s_api_certificates_v1_certificate_signing_request.c
#   model/io_k8s_api_certificates_v1_certificate_signing_request_condition.c
#   model/io_k8s_api_certificates_v1_certificate_signing_request_list.c
#   model/io_k8s_api_certificates_v1_certificate_signing_request_spec.c
#   model/io_k8s_api_certificates_v1_certificate_signing_request_status.c
#   model/io_k8s_api_certificates_v1beta1_certificate_signing_request.c
#   model/io_k8s_api_certificates_v1beta1_certificate_signing_request_condition.c
#   model/io_k8s_api_certificates_v1beta1_certificate_signing_request_list.c
#   model/io_k8s_api_certificates_v1beta1_certificate_signing_request_spec.c
#   model/io_k8s_api_certificates_v1beta1_certificate_signing_request_status.c
#   model/io_k8s_api_coordination_v1_lease.c
#   model/io_k8s_api_coordination_v1_lease_list.c
#   model/io_k8s_api_coordination_v1_lease_spec.c
#   model/io_k8s_api_coordination_v1beta1_lease.c
#   model/io_k8s_api_coordination_v1beta1_lease_list.c
#   model/io_k8s_api_coordination_v1beta1_lease_spec.c
#   model/io_k8s_api_core_v1_affinity.c
#   model/io_k8s_api_core_v1_attached_volume.c
#   model/io_k8s_api_core_v1_aws_elastic_block_store_volume_source.c
#   model/io_k8s_api_core_v1_azure_disk_volume_source.c
#   model/io_k8s_api_core_v1_azure_file_persistent_volume_source.c
#   model/io_k8s_api_core_v1_azure_file_volume_source.c
#   model/io_k8s_api_core_v1_binding.c
#   model/io_k8s_api_core_v1_capabilities.c
#   model/io_k8s_api_core_v1_ceph_fs_persistent_volume_source.c
#   model/io_k8s_api_core_v1_ceph_fs_volume_source.c
#   model/io_k8s_api_core_v1_cinder_persistent_volume_source.c
#   model/io_k8s_api_core_v1_cinder_volume_source.c
#   model/io_k8s_api_core_v1_client_ip_config.c
#   model/io_k8s_api_core_v1_component_condition.c
#   model/io_k8s_api_core_v1_component_status.c
#   model/io_k8s_api_core_v1_component_status_list.c
#   model/io_k8s_api_core_v1_config_map.c
#   model/io_k8s_api_core_v1_config_map_env_source.c
#   model/io_k8s_api_core_v1_config_map_key_selector.c
#   model/io_k8s_api_core_v1_config_map_list.c
#   model/io_k8s_api_core_v1_config_map_node_config_source.c
#   model/io_k8s_api_core_v1_config_map_projection.c
#   model/io_k8s_api_core_v1_config_map_volume_source.c
#   model/io_k8s_api_core_v1_container.c
#   model/io_k8s_api_core_v1_container_image.c
#   model/io_k8s_api_core_v1_container_port.c
#   model/io_k8s_api_core_v1_container_state.c
#   model/io_k8s_api_core_v1_container_state_running.c
#   model/io_k8s_api_core_v1_container_state_terminated.c
#   model/io_k8s_api_core_v1_container_state_waiting.c
#   model/io_k8s_api_core_v1_container_status.c
#   model/io_k8s_api_core_v1_csi_persistent_volume_source.c
#   model/io_k8s_api_core_v1_csi_volume_source.c
#   model/io_k8s_api_core_v1_daemon_endpoint.c
#   model/io_k8s_api_core_v1_downward_api_projection.c
#   model/io_k8s_api_core_v1_downward_api_volume_file.c
#   model/io_k8s_api_core_v1_downward_api_volume_source.c
#   model/io_k8s_api_core_v1_empty_dir_volume_source.c
#   model/io_k8s_api_core_v1_endpoint_address.c
#   model/io_k8s_api_core_v1_endpoint_port.c
#   model/io_k8s_api_core_v1_endpoint_subset.c
#   model/io_k8s_api_core_v1_endpoints.c
#   model/io_k8s_api_core_v1_endpoints_list.c
#   model/io_k8s_api_core_v1_env_from_source.c
#   model/io_k8s_api_core_v1_env_var.c
#   model/io_k8s_api_core_v1_env_var_source.c
#   model/io_k8s_api_core_v1_ephemeral_container.c
#   model/io_k8s_api_core_v1_ephemeral_containers.c
#   model/io_k8s_api_core_v1_ephemeral_volume_source.c
#   model/io_k8s_api_core_v1_event.c
#   model/io_k8s_api_core_v1_event_list.c
#   model/io_k8s_api_core_v1_event_series.c
#   model/io_k8s_api_core_v1_event_source.c
#   model/io_k8s_api_core_v1_exec_action.c
#   model/io_k8s_api_core_v1_fc_volume_source.c
#   model/io_k8s_api_core_v1_flex_persistent_volume_source.c
#   model/io_k8s_api_core_v1_flex_volume_source.c
#   model/io_k8s_api_core_v1_flocker_volume_source.c
#   model/io_k8s_api_core_v1_gce_persistent_disk_volume_source.c
#   model/io_k8s_api_core_v1_git_repo_volume_source.c
#   model/io_k8s_api_core_v1_glusterfs_persistent_volume_source.c
#   model/io_k8s_api_core_v1_glusterfs_volume_source.c
#   model/io_k8s_api_core_v1_handler.c
#   model/io_k8s_api_core_v1_host_alias.c
#   model/io_k8s_api_core_v1_host_path_volume_source.c
#   model/io_k8s_api_core_v1_http_get_action.c
#   model/io_k8s_api_core_v1_http_header.c
#   model/io_k8s_api_core_v1_iscsi_persistent_volume_source.c
#   model/io_k8s_api_core_v1_iscsi_volume_source.c
#   model/io_k8s_api_core_v1_key_to_path.c
#   model/io_k8s_api_core_v1_lifecycle.c
#   model/io_k8s_api_core_v1_limit_range.c
#   model/io_k8s_api_core_v1_limit_range_item.c
#   model/io_k8s_api_core_v1_limit_range_list.c
#   model/io_k8s_api_core_v1_limit_range_spec.c
#   model/io_k8s_api_core_v1_load_balancer_ingress.c
#   model/io_k8s_api_core_v1_load_balancer_status.c
#   model/io_k8s_api_core_v1_local_object_reference.c
#   model/io_k8s_api_core_v1_local_volume_source.c
#   model/io_k8s_api_core_v1_namespace.c
#   model/io_k8s_api_core_v1_namespace_condition.c
#   model/io_k8s_api_core_v1_namespace_list.c
#   model/io_k8s_api_core_v1_namespace_spec.c
#   model/io_k8s_api_core_v1_namespace_status.c
#   model/io_k8s_api_core_v1_nfs_volume_source.c
#   model/io_k8s_api_core_v1_node.c
#   model/io_k8s_api_core_v1_node_address.c
#   model/io_k8s_api_core_v1_node_affinity.c
#   model/io_k8s_api_core_v1_node_condition.c
#   model/io_k8s_api_core_v1_node_config_source.c
#   model/io_k8s_api_core_v1_node_config_status.c
#   model/io_k8s_api_core_v1_node_daemon_endpoints.c
#   model/io_k8s_api_core_v1_node_list.c
#   model/io_k8s_api_core_v1_node_selector.c
#   model/io_k8s_api_core_v1_node_selector_requirement.c
#   model/io_k8s_api_core_v1_node_selector_term.c
#   model/io_k8s_api_core_v1_node_spec.c
#   model/io_k8s_api_core_v1_node_status.c
#   model/io_k8s_api_core_v1_node_system_info.c
#   model/io_k8s_api_core_v1_object_field_selector.c
#   model/io_k8s_api_core_v1_object_reference.c
#   model/io_k8s_api_core_v1_persistent_volume.c
#   model/io_k8s_api_core_v1_persistent_volume_claim.c
#   model/io_k8s_api_core_v1_persistent_volume_claim_condition.c
#   model/io_k8s_api_core_v1_persistent_volume_claim_list.c
#   model/io_k8s_api_core_v1_persistent_volume_claim_spec.c
#   model/io_k8s_api_core_v1_persistent_volume_claim_status.c
#   model/io_k8s_api_core_v1_persistent_volume_claim_template.c
#   model/io_k8s_api_core_v1_persistent_volume_claim_volume_source.c
#   model/io_k8s_api_core_v1_persistent_volume_list.c
#   model/io_k8s_api_core_v1_persistent_volume_spec.c
#   model/io_k8s_api_core_v1_persistent_volume_status.c
#   model/io_k8s_api_core_v1_photon_persistent_disk_volume_source.c
#   model/io_k8s_api_core_v1_pod.c
#   model/io_k8s_api_core_v1_pod_affinity.c
#   model/io_k8s_api_core_v1_pod_affinity_term.c
#   model/io_k8s_api_core_v1_pod_anti_affinity.c
#   model/io_k8s_api_core_v1_pod_condition.c
#   model/io_k8s_api_core_v1_pod_dns_config.c
#   model/io_k8s_api_core_v1_pod_dns_config_option.c
#   model/io_k8s_api_core_v1_pod_ip.c
#   model/io_k8s_api_core_v1_pod_list.c
#   model/io_k8s_api_core_v1_pod_readiness_gate.c
#   model/io_k8s_api_core_v1_pod_security_context.c
#   model/io_k8s_api_core_v1_pod_spec.c
#   model/io_k8s_api_core_v1_pod_status.c
#   model/io_k8s_api_core_v1_pod_template.c
#   model/io_k8s_api_core_v1_pod_template_list.c
#   model/io_k8s_api_core_v1_pod_template_spec.c
#   model/io_k8s_api_core_v1_port_status.c
#   model/io_k8s_api_core_v1_portworx_volume_source.c
#   model/io_k8s_api_core_v1_preferred_scheduling_term.c
#   model/io_k8s_api_core_v1_probe.c
#   model/io_k8s_api_core_v1_projected_volume_source.c
#   model/io_k8s_api_core_v1_quobyte_volume_source.c
#   model/io_k8s_api_core_v1_rbd_persistent_volume_source.c
#   model/io_k8s_api_core_v1_rbd_volume_source.c
#   model/io_k8s_api_core_v1_replication_controller.c
#   model/io_k8s_api_core_v1_replication_controller_condition.c
#   model/io_k8s_api_core_v1_replication_controller_list.c
#   model/io_k8s_api_core_v1_replication_controller_spec.c
#   model/io_k8s_api_core_v1_replication_controller_status.c
#   model/io_k8s_api_core_v1_resource_field_selector.c
#   model/io_k8s_api_core_v1_resource_quota.c
#   model/io_k8s_api_core_v1_resource_quota_list.c
#   model/io_k8s_api_core_v1_resource_quota_spec.c
#   model/io_k8s_api_core_v1_resource_quota_status.c
#   model/io_k8s_api_core_v1_resource_requirements.c
#   model/io_k8s_api_core_v1_scale_io_persistent_volume_source.c
#   model/io_k8s_api_core_v1_scale_io_volume_source.c
#   model/io_k8s_api_core_v1_scope_selector.c
#   model/io_k8s_api_core_v1_scoped_resource_selector_requirement.c
#   model/io_k8s_api_core_v1_se_linux_options.c
#   model/io_k8s_api_core_v1_seccomp_profile.c
#   model/io_k8s_api_core_v1_secret.c
#   model/io_k8s_api_core_v1_secret_env_source.c
#   model/io_k8s_api_core_v1_secret_key_selector.c
#   model/io_k8s_api_core_v1_secret_list.c
#   model/io_k8s_api_core_v1_secret_projection.c
#   model/io_k8s_api_core_v1_secret_reference.c
#   model/io_k8s_api_core_v1_secret_volume_source.c
#   model/io_k8s_api_core_v1_security_context.c
#   model/io_k8s_api_core_v1_service.c
#   model/io_k8s_api_core_v1_service_account.c
#   model/io_k8s_api_core_v1_service_account_list.c
#   model/io_k8s_api_core_v1_service_account_token_projection.c
#   model/io_k8s_api_core_v1_service_list.c
#   model/io_k8s_api_core_v1_service_port.c
#   model/io_k8s_api_core_v1_service_spec.c
#   model/io_k8s_api_core_v1_service_status.c
#   model/io_k8s_api_core_v1_session_affinity_config.c
#   model/io_k8s_api_core_v1_storage_os_persistent_volume_source.c
#   model/io_k8s_api_core_v1_storage_os_volume_source.c
#   model/io_k8s_api_core_v1_sysctl.c
#   model/io_k8s_api_core_v1_taint.c
#   model/io_k8s_api_core_v1_tcp_socket_action.c
#   model/io_k8s_api_core_v1_toleration.c
#   model/io_k8s_api_core_v1_topology_selector_label_requirement.c
#   model/io_k8s_api_core_v1_topology_selector_term.c
#   model/io_k8s_api_core_v1_topology_spread_constraint.c
#   model/io_k8s_api_core_v1_typed_local_object_reference.c
#   model/io_k8s_api_core_v1_volume.c
#   model/io_k8s_api_core_v1_volume_device.c
#   model/io_k8s_api_core_v1_volume_mount.c
#   model/io_k8s_api_core_v1_volume_node_affinity.c
#   model/io_k8s_api_core_v1_volume_projection.c
#   model/io_k8s_api_core_v1_vsphere_virtual_disk_volume_source.c
#   model/io_k8s_api_core_v1_weighted_pod_affinity_term.c
#   model/io_k8s_api_core_v1_windows_security_context_options.c
#   model/io_k8s_api_discovery_v1beta1_endpoint.c
#   model/io_k8s_api_discovery_v1beta1_endpoint_conditions.c
#   model/io_k8s_api_discovery_v1beta1_endpoint_port.c
#   model/io_k8s_api_discovery_v1beta1_endpoint_slice.c
#   model/io_k8s_api_discovery_v1beta1_endpoint_slice_list.c
#   model/io_k8s_api_events_v1_event.c
#   model/io_k8s_api_events_v1_event_list.c
#   model/io_k8s_api_events_v1_event_series.c
#   model/io_k8s_api_events_v1beta1_event.c
#   model/io_k8s_api_events_v1beta1_event_list.c
#   model/io_k8s_api_events_v1beta1_event_series.c
#   model/io_k8s_api_extensions_v1beta1_http_ingress_path.c
#   model/io_k8s_api_extensions_v1beta1_http_ingress_rule_value.c
#   model/io_k8s_api_extensions_v1beta1_ingress.c
#   model/io_k8s_api_extensions_v1beta1_ingress_backend.c
#   model/io_k8s_api_extensions_v1beta1_ingress_list.c
#   model/io_k8s_api_extensions_v1beta1_ingress_rule.c
#   model/io_k8s_api_extensions_v1beta1_ingress_spec.c
#   model/io_k8s_api_extensions_v1beta1_ingress_status.c
#   model/io_k8s_api_extensions_v1beta1_ingress_tls.c
#   model/io_k8s_api_flowcontrol_v1beta1_flow_distinguisher_method.c
#   model/io_k8s_api_flowcontrol_v1beta1_flow_schema.c
#   model/io_k8s_api_flowcontrol_v1beta1_flow_schema_condition.c
#   model/io_k8s_api_flowcontrol_v1beta1_flow_schema_list.c
#   model/io_k8s_api_flowcontrol_v1beta1_flow_schema_spec.c
#   model/io_k8s_api_flowcontrol_v1beta1_flow_schema_status.c
#   model/io_k8s_api_flowcontrol_v1beta1_group_subject.c
#   model/io_k8s_api_flowcontrol_v1beta1_limit_response.c
#   model/io_k8s_api_flowcontrol_v1beta1_limited_priority_level_configuration.c
#   model/io_k8s_api_flowcontrol_v1beta1_non_resource_policy_rule.c
#   model/io_k8s_api_flowcontrol_v1beta1_policy_rules_with_subjects.c
#   model/io_k8s_api_flowcontrol_v1beta1_priority_level_configuration.c
#   model/io_k8s_api_flowcontrol_v1beta1_priority_level_configuration_condition.c
#   model/io_k8s_api_flowcontrol_v1beta1_priority_level_configuration_list.c
#   model/io_k8s_api_flowcontrol_v1beta1_priority_level_configuration_reference.c
#   model/io_k8s_api_flowcontrol_v1beta1_priority_level_configuration_spec.c
#   model/io_k8s_api_flowcontrol_v1beta1_priority_level_configuration_status.c
#   model/io_k8s_api_flowcontrol_v1beta1_queuing_configuration.c
#   model/io_k8s_api_flowcontrol_v1beta1_resource_policy_rule.c
#   model/io_k8s_api_flowcontrol_v1beta1_service_account_subject.c
#   model/io_k8s_api_flowcontrol_v1beta1_subject.c
#   model/io_k8s_api_flowcontrol_v1beta1_user_subject.c
#   model/io_k8s_api_networking_v1_http_ingress_path.c
#   model/io_k8s_api_networking_v1_http_ingress_rule_value.c
#   model/io_k8s_api_networking_v1_ingress.c
#   model/io_k8s_api_networking_v1_ingress_backend.c
#   model/io_k8s_api_networking_v1_ingress_class.c
#   model/io_k8s_api_networking_v1_ingress_class_list.c
#   model/io_k8s_api_networking_v1_ingress_class_spec.c
#   model/io_k8s_api_networking_v1_ingress_list.c
#   model/io_k8s_api_networking_v1_ingress_rule.c
#   model/io_k8s_api_networking_v1_ingress_service_backend.c
#   model/io_k8s_api_networking_v1_ingress_spec.c
#   model/io_k8s_api_networking_v1_ingress_status.c
#   model/io_k8s_api_networking_v1_ingress_tls.c
#   model/io_k8s_api_networking_v1_ip_block.c
#   model/io_k8s_api_networking_v1_network_policy.c
#   model/io_k8s_api_networking_v1_network_policy_egress_rule.c
#   model/io_k8s_api_networking_v1_network_policy_ingress_rule.c
#   model/io_k8s_api_networking_v1_network_policy_list.c
#   model/io_k8s_api_networking_v1_network_policy_peer.c
#   model/io_k8s_api_networking_v1_network_policy_port.c
#   model/io_k8s_api_networking_v1_network_policy_spec.c
#   model/io_k8s_api_networking_v1_service_backend_port.c
#   model/io_k8s_api_networking_v1beta1_http_ingress_path.c
#   model/io_k8s_api_networking_v1beta1_http_ingress_rule_value.c
#   model/io_k8s_api_networking_v1beta1_ingress.c
#   model/io_k8s_api_networking_v1beta1_ingress_backend.c
#   model/io_k8s_api_networking_v1beta1_ingress_class.c
#   model/io_k8s_api_networking_v1beta1_ingress_class_list.c
#   model/io_k8s_api_networking_v1beta1_ingress_class_spec.c
#   model/io_k8s_api_networking_v1beta1_ingress_list.c
#   model/io_k8s_api_networking_v1beta1_ingress_rule.c
#   model/io_k8s_api_networking_v1beta1_ingress_spec.c
#   model/io_k8s_api_networking_v1beta1_ingress_status.c
#   model/io_k8s_api_networking_v1beta1_ingress_tls.c
#   model/io_k8s_api_node_v1_overhead.c
#   model/io_k8s_api_node_v1_runtime_class.c
#   model/io_k8s_api_node_v1_runtime_class_list.c
#   model/io_k8s_api_node_v1_scheduling.c
#   model/io_k8s_api_node_v1alpha1_overhead.c
#   model/io_k8s_api_node_v1alpha1_runtime_class.c
#   model/io_k8s_api_node_v1alpha1_runtime_class_list.c
#   model/io_k8s_api_node_v1alpha1_runtime_class_spec.c
#   model/io_k8s_api_node_v1alpha1_scheduling.c
#   model/io_k8s_api_node_v1beta1_overhead.c
#   model/io_k8s_api_node_v1beta1_runtime_class.c
#   model/io_k8s_api_node_v1beta1_runtime_class_list.c
#   model/io_k8s_api_node_v1beta1_scheduling.c
#   model/io_k8s_api_policy_v1beta1_allowed_csi_driver.c
#   model/io_k8s_api_policy_v1beta1_allowed_flex_volume.c
#   model/io_k8s_api_policy_v1beta1_allowed_host_path.c
#   model/io_k8s_api_policy_v1beta1_eviction.c
#   model/io_k8s_api_policy_v1beta1_fs_group_strategy_options.c
#   model/io_k8s_api_policy_v1beta1_host_port_range.c
#   model/io_k8s_api_policy_v1beta1_id_range.c
#   model/io_k8s_api_policy_v1beta1_pod_disruption_budget.c
#   model/io_k8s_api_policy_v1beta1_pod_disruption_budget_list.c
#   model/io_k8s_api_policy_v1beta1_pod_disruption_budget_spec.c
#   model/io_k8s_api_policy_v1beta1_pod_disruption_budget_status.c
#   model/io_k8s_api_policy_v1beta1_pod_security_policy.c
#   model/io_k8s_api_policy_v1beta1_pod_security_policy_list.c
#   model/io_k8s_api_policy_v1beta1_pod_security_policy_spec.c
#   model/io_k8s_api_policy_v1beta1_run_as_group_strategy_options.c
#   model/io_k8s_api_policy_v1beta1_run_as_user_strategy_options.c
#   model/io_k8s_api_policy_v1beta1_runtime_class_strategy_options.c
#   model/io_k8s_api_policy_v1beta1_se_linux_strategy_options.c
#   model/io_k8s_api_policy_v1beta1_supplemental_groups_strategy_options.c
#   model/io_k8s_api_rbac_v1_aggregation_rule.c
#   model/io_k8s_api_rbac_v1_cluster_role.c
#   model/io_k8s_api_rbac_v1_cluster_role_binding.c
#   model/io_k8s_api_rbac_v1_cluster_role_binding_list.c
#   model/io_k8s_api_rbac_v1_cluster_role_list.c
#   model/io_k8s_api_rbac_v1_policy_rule.c
#   model/io_k8s_api_rbac_v1_role.c
#   model/io_k8s_api_rbac_v1_role_binding.c
#   model/io_k8s_api_rbac_v1_role_binding_list.c
#   model/io_k8s_api_rbac_v1_role_list.c
#   model/io_k8s_api_rbac_v1_role_ref.c
#   model/io_k8s_api_rbac_v1_subject.c
#   model/io_k8s_api_rbac_v1alpha1_aggregation_rule.c
#   model/io_k8s_api_rbac_v1alpha1_cluster_role.c
#   model/io_k8s_api_rbac_v1alpha1_cluster_role_binding.c
#   model/io_k8s_api_rbac_v1alpha1_cluster_role_binding_list.c
#   model/io_k8s_api_rbac_v1alpha1_cluster_role_list.c
#   model/io_k8s_api_rbac_v1alpha1_policy_rule.c
#   model/io_k8s_api_rbac_v1alpha1_role.c
#   model/io_k8s_api_rbac_v1alpha1_role_binding.c
#   model/io_k8s_api_rbac_v1alpha1_role_binding_list.c
#   model/io_k8s_api_rbac_v1alpha1_role_list.c
#   model/io_k8s_api_rbac_v1alpha1_role_ref.c
#   model/io_k8s_api_rbac_v1alpha1_subject.c
#   model/io_k8s_api_rbac_v1beta1_aggregation_rule.c
#   model/io_k8s_api_rbac_v1beta1_cluster_role.c
#   model/io_k8s_api_rbac_v1beta1_cluster_role_binding.c
#   model/io_k8s_api_rbac_v1beta1_cluster_role_binding_list.c
#   model/io_k8s_api_rbac_v1beta1_cluster_role_list.c
#   model/io_k8s_api_rbac_v1beta1_policy_rule.c
#   model/io_k8s_api_rbac_v1beta1_role.c
#   model/io_k8s_api_rbac_v1beta1_role_binding.c
#   model/io_k8s_api_rbac_v1beta1_role_binding_list.c
#   model/io_k8s_api_rbac_v1beta1_role_list.c
#   model/io_k8s_api_rbac_v1beta1_role_ref.c
#   model/io_k8s_api_rbac_v1beta1_subject.c
#   model/io_k8s_api_scheduling_v1_priority_class.c
#   model/io_k8s_api_scheduling_v1_priority_class_list.c
#   model/io_k8s_api_scheduling_v1alpha1_priority_class.c
#   model/io_k8s_api_scheduling_v1alpha1_priority_class_list.c
#   model/io_k8s_api_scheduling_v1beta1_priority_class.c
#   model/io_k8s_api_scheduling_v1beta1_priority_class_list.c
#   model/io_k8s_api_storage_v1_csi_driver.c
#   model/io_k8s_api_storage_v1_csi_driver_list.c
#   model/io_k8s_api_storage_v1_csi_driver_spec.c
#   model/io_k8s_api_storage_v1_csi_node.c
#   model/io_k8s_api_storage_v1_csi_node_driver.c
#   model/io_k8s_api_storage_v1_csi_node_list.c
#   model/io_k8s_api_storage_v1_csi_node_spec.c
#   model/io_k8s_api_storage_v1_storage_class.c
#   model/io_k8s_api_storage_v1_storage_class_list.c
#   model/io_k8s_api_storage_v1_token_request.c
#   model/io_k8s_api_storage_v1_volume_attachment.c
#   model/io_k8s_api_storage_v1_volume_attachment_list.c
#   model/io_k8s_api_storage_v1_volume_attachment_source.c
#   model/io_k8s_api_storage_v1_volume_attachment_spec.c
#   model/io_k8s_api_storage_v1_volume_attachment_status.c
#   model/io_k8s_api_storage_v1_volume_error.c
#   model/io_k8s_api_storage_v1_volume_node_resources.c
#   model/io_k8s_api_storage_v1alpha1_csi_storage_capacity.c
#   model/io_k8s_api_storage_v1alpha1_csi_storage_capacity_list.c
#   model/io_k8s_api_storage_v1alpha1_volume_attachment.c
#   model/io_k8s_api_storage_v1alpha1_volume_attachment_list.c
#   model/io_k8s_api_storage_v1alpha1_volume_attachment_source.c
#   model/io_k8s_api_storage_v1alpha1_volume_attachment_spec.c
#   model/io_k8s_api_storage_v1alpha1_volume_attachment_status.c
#   model/io_k8s_api_storage_v1alpha1_volume_error.c
#   model/io_k8s_api_storage_v1beta1_csi_driver.c
#   model/io_k8s_api_storage_v1beta1_csi_driver_list.c
#   model/io_k8s_api_storage_v1beta1_csi_driver_spec.c
#   model/io_k8s_api_storage_v1beta1_csi_node.c
#   model/io_k8s_api_storage_v1beta1_csi_node_driver.c
#   model/io_k8s_api_storage_v1beta1_csi_node_list.c
#   model/io_k8s_api_storage_v1beta1_csi_node_spec.c
#   model/io_k8s_api_storage_v1beta1_storage_class.c
#   model/io_k8s_api_storage_v1beta1_storage_class_list.c
#   model/io_k8s_api_storage_v1beta1_token_request.c
#   model/io_k8s_api_storage_v1beta1_volume_attachment.c
#   model/io_k8s_api_storage_v1beta1_volume_attachment_list.c
#   model/io_k8s_api_storage_v1beta1_volume_attachment_source.c
#   model/io_k8s_api_storage_v1beta1_volume_attachment_spec.c
#   model/io_k8s_api_storage_v1beta1_volume_attachment_status.c
#   model/io_k8s_api_storage_v1beta1_volume_error.c
#   model/io_k8s_api_storage_v1beta1_volume_node_resources.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1_custom_resource_column_definition.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1_custom_resource_conversion.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1_custom_resource_definition.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1_custom_resource_definition_condition.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1_custom_resource_definition_list.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1_custom_resource_definition_names.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1_custom_resource_definition_spec.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1_custom_resource_definition_status.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1_custom_resource_definition_version.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1_custom_resource_subresource_scale.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1_custom_resource_subresources.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1_custom_resource_validation.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1_external_documentation.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1_json_schema_props.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1_service_reference.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1_webhook_client_config.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1_webhook_conversion.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1beta1_custom_resource_column_definition.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1beta1_custom_resource_conversion.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1beta1_custom_resource_definition.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1beta1_custom_resource_definition_condition.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1beta1_custom_resource_definition_list.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1beta1_custom_resource_definition_names.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1beta1_custom_resource_definition_spec.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1beta1_custom_resource_definition_status.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1beta1_custom_resource_definition_version.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1beta1_custom_resource_subresource_scale.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1beta1_custom_resource_subresources.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1beta1_custom_resource_validation.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1beta1_external_documentation.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1beta1_json_schema_props.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1beta1_service_reference.c
#   model/io_k8s_apiextensions_apiserver_pkg_apis_apiextensions_v1beta1_webhook_client_config.c
#   model/io_k8s_apimachinery_pkg_apis_meta_v1_api_group.c
#   model/io_k8s_apimachinery_pkg_apis_meta_v1_api_group_list.c
#   model/io_k8s_apimachinery_pkg_apis_meta_v1_api_resource.c
#   model/io_k8s_apimachinery_pkg_apis_meta_v1_api_resource_list.c
#   model/io_k8s_apimachinery_pkg_apis_meta_v1_api_versions.c
#   model/io_k8s_apimachinery_pkg_apis_meta_v1_condition.c
#   model/io_k8s_apimachinery_pkg_apis_meta_v1_delete_options.c
#   model/io_k8s_apimachinery_pkg_apis_meta_v1_group_version_for_discovery.c
#   model/io_k8s_apimachinery_pkg_apis_meta_v1_label_selector.c
#   model/io_k8s_apimachinery_pkg_apis_meta_v1_label_selector_requirement.c
#   model/io_k8s_apimachinery_pkg_apis_meta_v1_list_meta.c
#   model/io_k8s_apimachinery_pkg_apis_meta_v1_managed_fields_entry.c
#   model/io_k8s_apimachinery_pkg_apis_meta_v1_object_meta.c
#   model/io_k8s_apimachinery_pkg_apis_meta_v1_owner_reference.c
#   model/io_k8s_apimachinery_pkg_apis_meta_v1_preconditions.c
#   model/io_k8s_apimachinery_pkg_apis_meta_v1_server_address_by_client_cidr.c
#   model/io_k8s_apimachinery_pkg_apis_meta_v1_status.c
#   model/io_k8s_apimachinery_pkg_apis_meta_v1_status_cause.c
#   model/io_k8s_apimachinery_pkg_apis_meta_v1_status_details.c
#   model/io_k8s_apimachinery_pkg_apis_meta_v1_watch_event.c
#   model/io_k8s_apimachinery_pkg_version_info.c
#   model/io_k8s_kube_aggregator_pkg_apis_apiregistration_v1_api_service.c
#   model/io_k8s_kube_aggregator_pkg_apis_apiregistration_v1_api_service_condition.c
#   model/io_k8s_kube_aggregator_pkg_apis_apiregistration_v1_api_service_list.c
#   model/io_k8s_kube_aggregator_pkg_apis_apiregistration_v1_api_service_spec.c
#   model/io_k8s_kube_aggregator_pkg_apis_apiregistration_v1_api_service_status.c
#   model/io_k8s_kube_aggregator_pkg_apis_apiregistration_v1_service_reference.c
#   model/io_k8s_kube_aggregator_pkg_apis_apiregistration_v1beta1_api_service.c
#   model/io_k8s_kube_aggregator_pkg_apis_apiregistration_v1beta1_api_service_condition.c
#   model/io_k8s_kube_aggregator_pkg_apis_apiregistration_v1beta1_api_service_list.c
#   model/io_k8s_kube_aggregator_pkg_apis_apiregistration_v1beta1_api_service_spec.c
#   model/io_k8s_kube_aggregator_pkg_apis_apiregistration_v1beta1_api_service_status.c
#   model/io_k8s_kube_aggregator_pkg_apis_apiregistration_v1beta1_service_reference.c
# apis
#   api/AdmissionregistrationAPI.c
#   api/AdmissionregistrationV1API.c
#   api/AdmissionregistrationV1beta1API.c
#   api/ApiextensionsAPI.c
#   api/ApiextensionsV1API.c
#   api/ApiextensionsV1beta1API.c
#   api/ApiregistrationAPI.c
#   api/ApiregistrationV1API.c
#   api/ApiregistrationV1beta1API.c
#   api/ApisAPI.c
#   api/AppsAPI.c
#   api/AppsV1API.c
#   api/AuthenticationAPI.c
#   api/AuthenticationV1API.c
#   api/AuthenticationV1beta1API.c
#   api/AuthorizationAPI.c
#   api/AuthorizationV1API.c
#   api/AuthorizationV1beta1API.c
#   api/AutoscalingAPI.c
#   api/AutoscalingV1API.c
#   api/AutoscalingV2beta1API.c
#   api/AutoscalingV2beta2API.c
#   api/BatchAPI.c
#   api/BatchV1API.c
#   api/BatchV1beta1API.c
#   api/CertificatesAPI.c
#   api/CertificatesV1API.c
#   api/CertificatesV1beta1API.c
#   api/CoordinationAPI.c
#   api/CoordinationV1API.c
#   api/CoordinationV1beta1API.c
#   api/CoreAPI.c
#   api/CoreV1API.c
#   api/DiscoveryAPI.c
#   api/DiscoveryV1beta1API.c
#   api/EventsAPI.c
#   api/EventsV1API.c
#   api/EventsV1beta1API.c
#   api/ExtensionsAPI.c
#   api/ExtensionsV1beta1API.c
#   api/FlowcontrolApiserverAPI.c
#   api/FlowcontrolApiserverV1beta1API.c
#   api/InternalApiserverAPI.c
#   api/InternalApiserverV1alpha1API.c
#   api/LogsAPI.c
#   api/NetworkingAPI.c
#   api/NetworkingV1API.c
#   api/NetworkingV1beta1API.c
#   api/NodeAPI.c
#   api/NodeV1API.c
#   api/NodeV1alpha1API.c
#   api/NodeV1beta1API.c
#   api/OpenidAPI.c
#   api/PolicyAPI.c
#   api/PolicyV1beta1API.c
#   api/RbacAuthorizationAPI.c
#   api/RbacAuthorizationV1API.c
#   api/RbacAuthorizationV1alpha1API.c
#   api/RbacAuthorizationV1beta1API.c
#   api/SchedulingAPI.c
#   api/SchedulingV1API.c
#   api/SchedulingV1alpha1API.c
#   api/SchedulingV1beta1API.c
#   api/StorageAPI.c
#   api/StorageV1API.c
#   api/StorageV1alpha1API.c
#   api/StorageV1beta1API.c
#   api/VersionAPI.c
#   api/WellKnownAPI.c
